--- a/css/styles.css
+++ b/css/styles.css
@@ -20,20 +20,91 @@ body {
   letter-spacing: 0.03em;
 }
 
-ul {
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.list {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 a {
   text-decoration: none;
 }
 
+.flexbox {
+  display: flex;
+}
+
+.page-header .flexbox {
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
+
+.contacts-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+
+  margin-right: auto;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.site-nav {
+  display: flex;
+}
+
+.link .logotype {
+  color: var(--primary-text-color);
+}
+
+.link.logo {
+  margin-right: 90px;
+}
+
+.contacts {
+  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* site-nav */
 
 .logotype {
   font-family: Raleway, sans-serif;
+  font-weight: 700;
   font-size: 26px;
-  line-height: 1.2;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 
 .logo {
@@ -61,7 +132,7 @@ a {
 }
 
 .site-nav .link:active {
-  color: purple;
+  color: red;
 }
 
 .contacts a {
@@ -76,42 +147,119 @@ a {
 }
 
 .contacts:active {
-  color: purple;
+  color: red;
 }
 
 /* hero */
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--hero-background-color);
+
+  max-width: 1600px;
+  min-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 1px solid transparent;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/bcgimg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
   color: var(--hero-text-color);
-  background-color: var(--secondary-background-color);
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  max-width: 696px;
 }
 
 .button {
+  display: inline-block;
+  border-radius: 4px;
+  min-width: 200px;
+  padding: 10px 32px;
+
   background-color: var(--accent-background-color);
   color: var(--hero-text-color);
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* section quolity*/
 
-.quolity-caption {
-  color: var(--hero-text-color);
+.section.quolity {
+  padding-top: 94px;
 }
 
-.quolity-title .service-text .followers {
+.quolity-caption {
+  display: none;
+}
+
+.quolity.list {
+  display: flex;
+}
+
+.quolity-item {
+  width: calc((100% - 30px * 3) / 4);
+}
+
+.quolity-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.quolity-item::before {
+  display: block;
+  content: "";
+  height: 120px;
+  outline: 1px transparent;
+  background-repeat: no-repeat;
+  background-color: var(--secondary-background-color);
+  background-position: center;
+}
+
+.icon-microscope::before {
+  background-image: url(../images/antenna.svg);
+}
+
+.icon-intime::before {
+  background-image: url(../images/clock.svg);
+}
+
+.icon-planing::before {
+  background-image: url(../images/planer.svg);
+}
+
+.icon-techno::before {
+  background-image: url(../images/astronaut.svg);
+}
+
+.quolity-title {
   font-weight: 700;
   font-size: 14px;
+  text-transform: uppercase;
   line-height: 1.14;
 }
 
@@ -121,13 +269,16 @@ a {
   line-height: 1.7;
 }
 
-.service-text {
-  color: var(--hero-text-color);
-  background-color: var(--secondary-background-color);
+/*Section service*/
+
+.service {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.staff {
-  background-color: var(--secondary-background-color);
+.section.service {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .captions {
@@ -135,43 +286,82 @@ a {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
+
+  margin-top: 0;
+  margin-bottom: 50px;
 }
 
+.service-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+/*Section staff*/
+
+.staff {
+  display: flex;
+  flex-wrap: wrap;
+}
+.section.staff {
+  background-color: var(--secondary-background-color);
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .staff-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .staff-text {
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.18;
+
+  margin-top: 0;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
-.social-links a {
-  color: var(--secondary-text-color);
-  text-decoration: none;
-}
-.social-links a:hover,
-.social-links a:focus {
-  color: var(--accent-text-color);
+.service-item {
+  width: calc((100% - 30px * 2) / 3);
 }
 
-.clients-link a:hover,
-.clients-link a:focus {
-  color: var(--accent-text-color);
+.staff-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.staff-item {
+  width: calc((100% - 30px * 3) / 4);
 }
 
 /* footer */
+
+.footer {
+  background-color: var(--hero-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .address {
   color: var(--hero-text-color);
   font-size: 14px;
   line-height: 1.7;
   font-style: normal;
+
+  margin-top: 20px;
+  margin-bottom: 9px;
+}
+.contacts-block {
+  display: inline-block;
+  width: calc((100% - 30px * 3) / 4);
 }
 
 .connect a {
+  display: block;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   text-decoration: none;
@@ -179,14 +369,10 @@ a {
   line-height: 1.7;
 }
 
-.followers {
+.footer .logotype {
   color: var(--hero-text-color);
 }
 
-.social-links:hover,
-.social-links:focus {
-  color: var(--accent-background-color);
-}
-.link .logotype {
-  color: var(--hero-text-color);
+.tel-number {
+  margin-top: 9px;
 }
