--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --secondary-background-color: #f5f4fa;
   --primary-background-color: #ffffff;
   --accent-background-color: #2196f3;
-  --hero-background-color: #2f303a;
+  --hero-background-color: #f9fafc;
 }
 
 body {
