--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,7 +14,25 @@ body {
 
   font-family: Roboto, sans-serif;
   font-weight: 400;
+  font-size: 14px;
   letter-spacing: 0.03em;
+}
+
+.btn-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.section.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.hero-title {
+  display: none;
+}
+.work-item {
+  display: flex;
 }
 
 button:hover,
@@ -22,13 +40,78 @@ button:focus {
   color: var(--hero-text-color);
   background-color: var(--accent-background-color);
 }
+
 button {
+  display: block;
+  border-radius: 4px;
+  padding: 6px 22px;
+
+  font-family: inherit;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+
   color: var(--primary-text-color);
   background-color: var(--secondary-background-color);
-  font-family: inherit;
+  border: 0;
+}
+
+.btn-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 50px;
+}
+
+.work-item {
+  text-decoration: none;
+}
+
+.work-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.card-container {
+  padding: 20px 24px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.examples-item {
+  width: calc((100% - 30px * 2) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.examples-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.card-container {
+  border: 1px solid #eeeeee;
 }
 
 .portfolio-title {
+  font-style: normal;
+  text-decoration: none;
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -37,13 +120,15 @@ button {
 }
 
 .portfolio-text {
+  color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.88;
-  color: var(--secondary-text-color);
 }
 
-.portfolio-description {
-  font-size: 18px;
-  line-height: 1.55;
-  color: var(--hero-text-color);
+.examples-item {
+  display: inline-block;
+}
+
+.examples-item:nth-child(3n) {
+  margin-right: 0;
 }
