--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,118 +1,234 @@
 :root {
-  --accent-text-color: #2196f3;
-  --primary-text-color: #212121;
-  --hero-text-color: #ffffff;
-  --secondary-text-color: #757575;
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --white-color: #ffffff;
+  --black-color: #000000;
   --secondary-background-color: #f5f4fa;
-  --primary-background-color: #ffffff;
+  --footer-color: #2f303a;
   --accent-background-color: #2196f3;
 }
 
-body {
+.page {
   color: var(--primary-text-color);
-  background-color: var(--primary-background-color);
+  background-color: var(--white-color);
 
   font-family: Roboto, sans-serif;
   font-weight: 400;
-  font-size: 14px;
   letter-spacing: 0.03em;
 }
 
-.btn-list {
-  list-style: none;
+.list {
   padding: 0;
   margin: 0;
+  list-style: none;
 }
-.section.portfolio {
+
+.logo {
+  margin-right: 30px;
+}
+
+/* Header */
+.header {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  outline: 1px solid tomato;
+}
+
+.header > .container {
+  display: flex;
+  justify-content: flex-end;
+
+  align-items: center;
+}
+
+.header-item {
+  margin-right: 50px;
+}
+
+.header-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.site-nav {
+  display: flex;
+  margin-right: auto;
+}
+
+.header-contacts {
+  display: flex;
+}
+
+.site-nav .link {
+  color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.site-nav .link.current {
+  color: var(--accent-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.header-contacts .link {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: var(--primary-text-color);
+}
+
+.site-nav .link:hover,
+.header-contacts .link:hover,
+.site-nav .link:focus,
+.header-contacts .link:focus,
+.address-item.link:hover,
+.address-item.link:focus {
+  color: var(--accent-color);
+}
+
+/* Footer */
+.footer {
+  background-color: var(--footer-color);
+
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.address-item {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--white-color);
+}
+
+.address-item.link {
+  font-style: normal;
+  color: var(--primary-text-color);
+}
+
+/* Hero */
+.hero {
+  text-align: center;
+
+  margin-top: 0;
+  margin-bottom: 0;
+
+  background-color: var(--footer-color);
+}
+
+.hero-title {
+  margin-top: 0;
+  margin-bottom: 30;
+  color: var(--white-color);
+
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+/* Section */
+.section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.hero-title {
-  display: none;
-}
-.work-item {
-  display: flex;
+.no-padding {
+  padding-top: 0;
+  padding-bottom: 94px;
 }
 
-button:hover,
-button:focus {
-  color: var(--hero-text-color);
-  background-color: var(--accent-background-color);
-}
-
-button {
-  display: block;
-  border-radius: 4px;
-  padding: 6px 22px;
-
-  font-family: inherit;
-  text-decoration: none;
+.section-title {
+  /* h2 */
+  color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 60px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
   text-align: center;
-  justify-content: center;
+  letter-spacing: 0.03em;
+}
+
+/* Features */
+
+.features .title {
+  /* h3 */
+  margin-top: 0;
+  margin-bottom: 10px;
+
+  color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.features .text {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+/* Team*/
+.team .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
+  color: var(--title-text-color);
 
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+}
 
-  color: var(--primary-text-color);
+.section.team {
   background-color: var(--secondary-background-color);
-  border: 0;
 }
 
-.btn-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+/* Button */
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 10px 32px;
 
-  margin-bottom: 50px;
-}
+  color: var(--white-color);
+  background-color: var(--accent-color);
 
-.work-item {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+
   text-decoration: none;
+  text-align: center;
 }
 
-.work-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.card-container {
-  padding: 20px 24px;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.examples-item {
-  width: calc((100% - 30px * 2) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-.examples-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.card-container {
-  border: 1px solid #eeeeee;
+/* Portfolio */
+.portfolio-link {
+  text-decoration: none;
 }
 
 .portfolio-title {
-  font-style: normal;
-  text-decoration: none;
-  color: var(--primary-text-color);
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -120,15 +236,38 @@ img {
 }
 
 .portfolio-text {
-  color: var(--secondary-text-color);
+  color: var(--primary-text-color);
+  font-weight: normal;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 }
 
-.examples-item {
-  display: inline-block;
+/* Filter*/
+.filter {
+  margin-bottom: 50px;
 }
 
-.examples-item:nth-child(3n) {
-  margin-right: 0;
+.filter-item {
+  background-color: var(--secondary-background-color);
+  color: var(--title-text-color);
+  border-style: none;
+  border-color: none;
+  outline: none;
+  border-image: none;
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.filter-item:hover,
+.filter-item:focus,
+.filter-item:active {
+  background-color: var(--accent-color);
+  border: none;
+  outline: none;
 }
