--- a/css/styles.css
+++ b/css/styles.css
@@ -1,125 +1,60 @@
 :root {
-  --accent-text-color: #2196f3;
-  --primary-text-color: #212121;
-  --hero-text-color: #ffffff;
-  --secondary-text-color: #757575;
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --white-color: #ffffff;
+  --black-color: #000000;
   --secondary-background-color: #f5f4fa;
-  --primary-background-color: #ffffff;
-  --accent-background-color: #2196f3;
-  --hero-background-color: #2f303a;
+  --footer-color: #2f303a;
 }
 
 body {
   color: var(--primary-text-color);
-  background-color: var(--primary-background-color);
-
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
+  background-color: var(--white-color);
+  font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
 }
 
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.list {
+li {
   list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.section.no-padding {
-  padding-top: 0;
-  padding-bottom: 0;
 }
 
 a {
   text-decoration: none;
 }
 
-.flexbox {
-  display: flex;
+/* лого */
+
+.logo > span {
+  color: var(---accent-color);
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
-.page-header .flexbox {
-  justify-content: flex-end;
-  align-items: center;
+.logo {
+  color: var(--black-color);
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
-
-.page-header {
-  border-bottom: 1px solid #ececec;
-}
-
-.contacts-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-
-  margin-right: auto;
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.nav-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.site-nav {
-  display: flex;
-}
-
-.link .logotype {
-  color: var(--primary-text-color);
-}
-
-.link.logo {
-  margin-right: 90px;
-}
-
-.contacts {
-  display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+.logo:hover,
+.logo:focus {
+  color: var(--accent-color);
 }
 
 /* site-nav */
 
-.logotype {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-
-.logo {
-  color: var(--accent-text-color);
-}
-
-.site-nav .link.current {
-  color: var(--accent-text-color);
+.site-nav .current {
+  color: var(--accent-color);
 }
 
 .site-nav .link {
-  color: var(--primary-text-color);
-}
-
-.site-nav .link .contacts a {
+  color: var(---primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -128,251 +63,138 @@ img {
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
+}
+.site-nav .link.current {
+  color: var(--accent-color);
 }
 
-.site-nav .link:active {
-  color: red;
+/*адрес*/
+.auth-nav .link {
+  color: var(--title-text-color);
 }
-
-.contacts a {
-  color: var(--secondary-text-color);
-  font-style: normal;
-  text-decoration: none;
-}
-
-.contacts:hover,
-.contacts:focus {
-  color: var(--accent-text-color);
-}
-
-.contacts:active {
-  color: red;
+.auth-nav .link:hover,
+.auth-nav .link:focus {
+  color: var(---accent-color);
 }
 
 /* hero */
-.hero-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
-  background-color: var(--hero-background-color);
-
-  max-width: 1600px;
-  min-height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  outline: 1px solid transparent;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/bcgimg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+.hero {
+  background-color: var(--footer-color);
 }
-
 .hero-title {
-  margin-top: 0;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-
-  color: var(--hero-text-color);
+  color: var(--white-color);
 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  letter-spacing: 0.06em;
+  text-align: center;
   text-transform: uppercase;
-  max-width: 696px;
+  letter-spacing: 0.06em;
 }
 
+/* button*/
 .button {
-  display: inline-block;
-  border-radius: 4px;
-  min-width: 200px;
-  padding: 10px 32px;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
 
-  background-color: var(--accent-background-color);
-  color: var(--hero-text-color);
-
-  font-weight: 700;
+  font-weight: bold;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.87;
+  align-items: center;
   letter-spacing: 0.06em;
-
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-/* section quolity*/
+/* section*/
 
-.section.quolity {
-  padding-top: 94px;
-}
-
-.quolity-caption {
-  display: none;
-}
-
-.quolity.list {
-  display: flex;
-}
-
-.quolity-item {
-  width: calc((100% - 30px * 3) / 4);
-}
-
-.quolity-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.quolity-item::before {
-  display: block;
-  content: "";
-  height: 120px;
-  outline: 1px transparent;
-  background-repeat: no-repeat;
-  background-color: var(--secondary-background-color);
-  background-position: center;
-}
-
-.icon-microscope::before {
-  background-image: url(../images/icon1.svg);
-}
-
-.icon-intime::before {
-  background-image: url(../images/clock.svg);
-}
-
-.icon-planing::before {
-  background-image: url(../images/diagram.svg);
-}
-
-.icon-techno::before {
-  background-image: url(../images/icon4.svg);
-}
-
-.quolity-title {
-  font-weight: 700;
+.section-title {
+  font-weight: bold;
   font-size: 14px;
-  text-transform: uppercase;
   line-height: 1.14;
+  text-transform: uppercase;
 }
 
-.quolity-text {
-  color: var(--secondary-text-color);
+.section .section-text {
+  color: var(--title-text-color);
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.71;
 }
 
-/*Section service*/
-
-.service {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.section.service {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.captions {
-  font-weight: 700;
+.gallery > h2 {
+  font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-
-  margin-top: 0;
-  margin-bottom: 50px;
 }
 
-.service-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-/*Section staff*/
-
-.staff {
-  display: flex;
-  flex-wrap: wrap;
-}
-.section.staff {
+/*Command*/
+.team-section {
   background-color: var(--secondary-background-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
-.staff-title {
+.team-section h2 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+.people list {
+  background-color: var(--secondary-background-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-
-  margin-top: 30px;
-  margin-bottom: 10px;
-  text-align: center;
 }
 
-.staff-text {
-  color: var(--secondary-text-color);
+.people-prof {
+  color: var(--title-text-color);
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
-
-  margin-top: 0;
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-.service-item {
-  width: calc((100% - 30px * 2) / 3);
-}
-
-.staff-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.staff-item {
-  width: calc((100% - 30px * 3) / 4);
 }
 
 /* footer */
-
-.footer {
-  background-color: var(--hero-background-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
+.logo > span {
+  color: var(--accent-color);
+}
+.logo .logo-white {
+  color: var(--white-color);
 }
 
+/*Adress*/
 .address {
-  color: var(--hero-text-color);
+  color: var(--white-color);
   font-size: 14px;
-  line-height: 1.7;
-  font-style: normal;
-
-  margin-top: 20px;
-  margin-bottom: 9px;
+  line-height: 1.71;
 }
-.contacts-block {
-  display: inline-block;
-  width: calc((100% - 30px * 3) / 4);
-}
-
-.connect a {
-  display: block;
+.address > a {
   color: rgba(255, 255, 255, 0.6);
-  font-style: normal;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 1.7;
+}
+.address > a:hover,
+.address > a:focus {
+  color: var(--accent-color);
 }
 
-.footer .logotype {
-  color: var(--hero-text-color);
+footer {
+  background-color: var(--footer-color);
+}
+.pictures {
+  color: var(--primary-text-color);
+}
+.filter-button {
+  color: var(--primary-text-color);
+  background-color: var(--secondary-background-color);
+  border-color: var(--secondary-background-color);
+}
+.filter-button:hover,
+.filter-button:focus {
+  color: var(--accent-color);
+}
+.filter-button:active {
+  background-color: var(--accent-color);
+  color: var(--white-color);
 }
 
-.tel-number {
-  margin-top: 9px;
+button {
+  font-family: inherit;
 }
