--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,6 +9,12 @@
   --accent-background-color: #2196f3;
 }
 
+a { text-decoration: none; }
+/* Убираем маркеры */
+li {
+  list-style-type: none;
+ }
+
 .page {
   color: var(--primary-text-color);
   background-color: var(--white-color);
@@ -100,6 +106,22 @@
 
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+/*Adress*/
+
+.link {
+  font-style: normal;
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.address {
+  font-style: normal;
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .address-item {
