--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,13 @@
   --border: #eeeeee;
 }
 
-.page {
-  color: var(--primary-text-color);
-  background-color: var(--white-color);
-
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.03em;
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
@@ -26,10 +26,51 @@ body {
   letter-spacing: 0.03em;
 }
 
+/* Header */
+
+.logo {
+  color: var(--black-color);
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  margin-right: 30px;
+}
+.logo-web {
+  color: var(--accent-color);
+}
+.logo-header-studio {
+  color: var(--black-color);
+}
+.logo-footer-studio {
+  color: var(--white-color);
+}
+.hide {
+  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .list {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+.page {
+  color: var(--primary-text-color);
+  background-color: var(--white-color);
+
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.03em;
 }
 
 ul {
@@ -45,7 +86,6 @@ a {
   text-decoration: none;
 }
 
-/* Header */
 .header {
   padding-top: 25px;
   padding-bottom: 25px;
@@ -113,15 +153,6 @@ a {
   line-height: 1.19;
 }
 
-.logo {
-  color: var(--black-color);
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  margin-right: 30px;
-}
 .logo:hover,
 .logo:focus {
   color: var(--accent-color);
