--- a/css/styles.css
+++ b/css/styles.css
@@ -107,25 +107,29 @@ a {
 .flex {
   display: flex;
 }
-
 .header-contact .item-nav:not(:first-child) {
   margin-left: 50px;
 }
-
 .flexbox {
   display: flex;
   justify-content: flex-end;
 }
-
 .nav.flex {
   margin-right: auto;
   align-items: center;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.box-footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .header > .container {
   display: flex;
   justify-content: flex-end;
-
   align-items: center;
 }
 
@@ -219,19 +223,21 @@ a {
   color: var(--primary-text-color);
 }
 
-.auth-nav .link {
-  color: var(--title-text-color);
+.site-nav {
+  color: var(--black-color);
+  margin: 0;
+  padding-left: 0;
+  align-items: center;
+  margin-left: 93px;
 }
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-  color: var(---accent-color);
+.site-nav .item-nav:not(:last-child) {
+  margin-right: 50px;
 }
 
 /* hero */
 
 .hero {
   text-align: center;
-
   margin-top: 0;
   margin-bottom: 0;
   background-color: var(--footer-color);
@@ -248,6 +254,56 @@ a {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+}
+.section-hero .link {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  color: var(--white);
+  background: var(--accent);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  width: 200px;
+  border-radius: 4px;
+  padding: 10px 32px;
+}
+
+.section-title {
+  color: var(--black);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+
+  margin: 0;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.our-approach {
+  margin: 0;
+  padding: 0;
+}
+
+.item-approach {
+  width: 270px;
+}
+
+.our-approach .item-approach:not(:first-child) {
+  margin-left: 30px;
+}
+
+.our-approach-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  margin: 0;
 }
 
 /* button*/
@@ -271,11 +327,6 @@ a {
 }
 
 /* section*/
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 
 .no-padding {
   padding-top: 0;
