--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --footer-color: #2f303a;
   --accent-background-color: #2196f3;
   --border: #eeeeee;
+  --footer-contact-text: rgba(255, 255, 255, 0.6);
 }
 
 html {
@@ -59,9 +60,201 @@ body {
 }
 
 .list {
-  padding: 0;
-  margin: 0;
   list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--black-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.site-nav {
+  color: var(--black);
+  margin: 0;
+  padding-left: 0;
+  align-items: center;
+  margin-left: 93px;
+}
+
+.site-nav .item-nav:not(:last-child) {
+  margin-right: 50px;
+}
+
+.item-nav .link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: flex;
+}
+
+.page-header {
+  border-bottom: 1px solid var(--border);
+}
+
+.header-contact {
+  margin: 0;
+  padding-left: 0;
+  align-items: center;
+}
+
+.header-contact .link {
+  color: var(--accent-color);
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.link:hover,
+.link:focus,
+.header-contact .link:hover,
+.header-contact .link:focus {
+  color: var(--accent-color);
+}
+
+.current {
+  color: var(--accent-color);
+}
+
+.address-kiev {
+  color: var(--white-color);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin: 0;
+}
+
+.footer-contact {
+  color: var(--footer-contact-text);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+footer {
+  background-color: var(--footer-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.section-hero {
+  background: var(--footer-color);
+}
+
+.work-list {
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+}
+
+.item-work {
+  width: calc((100% - 30px * 2) / 3);
+  margin-right: 30px;
+}
+
+.item-work:nth-child(3n) {
+  margin-right: 0;
+}
+
+.team-list {
+  margin: 0;
+  padding: 0;
+}
+
+.item-team {
+  margin-right: 30px;
+  width: calc((100% - 30px * 3) / 4);
+  border: var(--border);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--white-color);
+  padding-bottom: 30px;
+}
+
+.item-team:nth-child(4n) {
+  margin-right: 0;
+}
+
+.title {
+  color: var(--black-color);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.our-team {
+  margin: 0;
+  padding: 0;
+}
+
+.item-team {
+  width: 270px;
+}
+
+.our-team .item-team:not(:first-child) {
+  margin-left: 30px;
+}
+
+.our-team-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  margin: 0;
+}
+
+.our-team {
+  background: var(--secondary-background-color);
+}
+
+.name-manager {
+  color: var(--black-color);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.specialty {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin: 0;
+}
+
+.box-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.wrap {
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 
 .page {
@@ -92,7 +285,7 @@ a {
   outline: 1px solid tomato;
 }
 
-.container-opisanie {
+.container-description {
   padding: 20px 24px;
 }
 
@@ -107,21 +300,43 @@ a {
 .flex {
   display: flex;
 }
+
 .header-contact .item-nav:not(:first-child) {
   margin-left: 50px;
 }
+
 .flexbox {
   display: flex;
   justify-content: flex-end;
 }
+
 .nav.flex {
   margin-right: auto;
   align-items: center;
 }
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
+.section.our-accent {
+  padding-bottom: 0;
+}
+
+.address-footer {
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.footer .logo {
+  display: inline-block;
+}
+
+img {
+  display: block;
+}
+
 .box-footer {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -139,11 +354,6 @@ a {
 
 .header-item:not(:last-child) {
   margin-right: 50px;
-}
-
-.site-nav {
-  display: flex;
-  margin-right: auto;
 }
 
 /* лого */
@@ -184,15 +394,6 @@ a {
   color: var(--accent-color);
 }
 
-.site-nav .link:hover,
-.header-contacts .link:hover,
-.site-nav .link:focus,
-.header-contacts .link:focus,
-.address-item.link:hover,
-.address-item.link:focus {
-  color: var(--accent-color);
-}
-
 .site-nav .link.current {
   color: var(--accent-color);
   font-weight: 500;
@@ -202,13 +403,6 @@ a {
 }
 
 /*адрес*/
-
-.link {
-  font-style: normal;
-  color: var(--white-color);
-  font-size: 14px;
-  line-height: 1.71;
-}
 
 .address-item {
   font-style: normal;
@@ -223,32 +417,28 @@ a {
   color: var(--primary-text-color);
 }
 
-.site-nav {
-  color: var(--black-color);
-  margin: 0;
-  padding-left: 0;
-  align-items: center;
-  margin-left: 93px;
-}
-.site-nav .item-nav:not(:last-child) {
-  margin-right: 50px;
-}
-
 /* hero */
 
 .hero {
   text-align: center;
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: auto;
+  margin-left: auto;
+  width: 1200px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--footer-color);
 }
 .hero-title {
+  display: inline-block;
   margin-top: 0;
   margin-bottom: 30;
   color: var(--white-color);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 900;
+  max-width: 696px;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
@@ -259,45 +449,43 @@ a {
   display: block;
   margin-right: auto;
   margin-left: auto;
-  color: var(--white);
-  background: var(--accent);
+  color: var(--white-colorcolor);
+  background: var(--accent-color);
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-
   width: 200px;
   border-radius: 4px;
   padding: 10px 32px;
 }
 
 .section-title {
-  color: var(--black);
+  color: var(--black-color);
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-
   margin: 0;
   margin-bottom: 50px;
   text-align: center;
 }
 
-.our-approach {
+.our-accent {
   margin: 0;
   padding: 0;
 }
 
-.item-approach {
+.item-accent {
   width: 270px;
 }
 
-.our-approach .item-approach:not(:first-child) {
+.our-accent .item-accent:not(:first-child) {
   margin-left: 30px;
 }
 
-.our-approach-text {
+.our-accent-text {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -326,6 +514,58 @@ a {
   text-align: center;
 }
 
+.button-list {
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
+  margin-bottom: 50px;
+}
+
+.item-button + .item-button {
+  margin-left: 8px;
+}
+
+.button:hover,
+.button:focus {
+  background: var(--accent-color);
+  color: var(--white-color);
+}
+
+.project {
+  color: var(--black-color);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 0.06em;
+  margin: 0px;
+  margin-bottom: 10px;
+}
+
+.item-project {
+  width: calc((100% - 30px * 2) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid var(--border);
+}
+.item-project:nth-child(3n) {
+  margin-right: 0;
+}
+
+.item-project:nth-child(n + 7) {
+  margin-bottom: 0px;
+}
+
+.type-project {
+  color: var(--primary-text-color);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  margin: 0px;
+}
+
 /* section*/
 
 .no-padding {
@@ -350,7 +590,7 @@ a {
   line-height: 1.71;
 }
 
-.gallery > h2 {
+.section > h2 {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -368,14 +608,14 @@ a {
   line-height: 1.16;
   text-align: center;
 }
-.people list {
+.team list {
   background-color: var(--secondary-background-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
 }
 
-.people-prof {
+.team-prof {
   color: var(--title-text-color);
   font-weight: 400;
   font-size: 16px;
@@ -420,12 +660,6 @@ a {
 .address > a:hover,
 .address > a:focus {
   color: var(--accent-color);
-}
-
-footer {
-  background-color: var(--footer-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .pictures {
